# render-engine

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: render.hpp  reng.hpp
include/element/: Box.hpp  Element.hpp  ImageView.hpp
include/element/config/: Attributes.hpp  Flags.hpp
include/util/: util.hpp
src/: render.cpp  reng.cpp
src/element/: Box.cpp  Element.cpp  ImageView.cpp
src/element/config/: Attributes.cpp  Flags.cpp
tests/: build.sh  reng-declarative.sgml  reng-demo.cpp  reng-demo.sh  sfml-demo.cpp  sfml-demo.sh
